kubernetes/apps/observability/grafana/templates/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: grafana
specs:
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/name: grafana
    egress:
      - toFQDNs:
          - matchName: grafana.com                # dashboards
          - matchName: raw.githubusercontent.com  # custom dashboards
          - matchName: storage.googleapis.com     # plugins
        toPorts:
          - ports:
              - port: "443"
